# acapy-plugin-mediator-admin

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo/: Dockerfile  mediator_admin_demo.py  pyproject.toml
mediator_admin/: routes.py
