[tool.poetry]
name = "mediator-admin"
version = "0.1.0"
description = "POC of Mediator Admin controls for use in an agency"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = {version = "^0.7.4,<=1.0.0-rc0", allow-prereleases = true}
aiohttp = "^3.8.3"
aiohttp-apispec = "^2.2.3"

[tool.poetry.dev-dependencies]
black = "<22.10.0"
flake8 = "^5.0.4"
pre-commit = "<2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
